--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ decorator==4.4.2
 defusedxml==0.6.0
 entrypoints==0.3
 Flask==1.1.2
+gunicorn==20.0.4
 ipykernel==5.4.2
 ipython==7.19.0
 ipython-genutils==0.2.0
