--- a/nginx.conf
+++ b/nginx.conf
@@ -41,7 +41,7 @@ http {
         #access_log  logs/host.access.log  main;
 
         location / {
-            root   "/mnt/f5a0bfae-56ba-4b82-a4ae-a4c94b49e822/ML projects/BHP/client";
+            root   "client/app.html";
             index  index.html index.htm app.html;
             location /api/ {
              rewrite ^/api(.*) $1 break;
