--- a/nginx.conf
+++ b/nginx.conf
@@ -45,7 +45,7 @@ http {
             index  index.html index.htm app.html;
             location /api/ {
              rewrite ^/api(.*) $1 break;
-             proxy_pass http://127.0.0.1:5000;
+             proxy_pass https://real-estate-manthan.herokuapp.com/;
         }
         }
 
