--- a/nginx.conf
+++ b/nginx.conf
@@ -42,10 +42,10 @@ http {
 
         location / {
             root   "client/app.html";
-            index  index.html index.htm app.html;
+            index  app.html;
             location /api/ {
              rewrite ^/api(.*) $1 break;
-             proxy_pass https://real-estate-manthan.herokuapp.com/;
+             proxy_pass http://127.0.0.1:5000;
         }
         }
 
